text overlapping issue on navbar solve

--- a/css/food_delivery.css
+++ b/css/food_delivery.css
@@ -18,6 +18,7 @@ html{
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 1000;
 }
 
 /* navigation bar : logo and image */
@@ -158,7 +159,6 @@ html{
 /* contact section */
 #contact{
     position: relative;
-    z-index: -1;
 }
 #contact::before{
     content: "";
